--- a/index.html
+++ b/index.html
@@ -61,11 +61,80 @@
         </div>
       </div>
     </div>
-  </body>
 
-  <script>
-    "use strict";
-    // Код писать здесь
-    console.log("It works!");
-  </script>
+
+<style>
+  .border-color{
+    outline: none;
+    border: 3px solid #bcec30;
+  }
+  .error{
+    outline: none;
+    border: 3px solid red;
+  }
+</style>
+
+    <script>
+      "use strict";
+      // Код писать здесь
+  const addButtonEl = document.querySelector('.add-form-button');
+  const listEl = document.querySelector('.comments');
+  const fieldNameEl = document.querySelector('.add-form-name');
+  const fieldTextEl = document.querySelector('.add-form-text');
+  
+  fieldNameEl.addEventListener('input', ()=>{
+    fieldNameEl.classList.add('border-color');
+  })
+
+  fieldTextEl.addEventListener('input', ()=>{
+    fieldTextEl.classList.add('border-color');    
+  })
+
+  addButtonEl.addEventListener('click', ()=>{
+    if (fieldNameEl.value==='' || fieldTextEl.value==='') {
+      fieldNameEl.classList.add('error') || fieldTextEl.classList.add('error');
+        return;
+    }
+
+    fieldNameEl.classList.remove('error') || fieldTextEl.classList.remove('error');
+
+    const newReview = `
+    <li class="comment">
+          <div class="comment-header">
+            <div>${fieldNameEl.value}</div>
+            <div>${(() => {
+              const date = new Date();
+              const day = String(date.getDate()).padStart(2, '0');
+              const month = String(date.getMonth() + 1).padStart(2, '0');
+              const year = String(date.getFullYear()).slice(-2);
+              const hours = String(date.getHours()).padStart(2, '0');
+              const minutes = String(date.getMinutes()).padStart(2, '0');
+
+              return `${day}.${month}.${year} ${hours}:${minutes}`;
+          })()}</div>
+          </div>
+          <div class="comment-body">
+            <div class="comment-text">
+              ${fieldTextEl.value}
+            </div>
+          </div>
+          <div class="comment-footer">
+            <div class="likes">
+              <span class="likes-counter">0</span>
+              <button class="like-button"></button>
+            </div>
+          </div>
+        </li>
+    `;
+
+    listEl.innerHTML+=newReview;
+
+    fieldNameEl.classList.remove('border-color');
+    fieldTextEl.classList.remove('border-color');
+    fieldNameEl.value='';
+    fieldTextEl.value='';
+  })
+    </script>
+
+  </body>
 </html>
