общая функция с get-запросом и добавление лоадеров на запуск приложения и отправку комментария

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
           <button class="add-form-button">Написать</button>
         </div>
       </div>
+
+      <p class="add-form-loader">Комментарий добавляется...</p>
     </div>
 
     <style>
