устранила задержку с отображением текста первого лоадера (вынесла лоадер во второй скрипт и поставила его выше index.js)

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       }
     </style>
 
+    <script type="module" src="modules/loader.js"></script>
     <script type="module" src="modules/index.js"></script>
   </body>
 </html>
