регистрация и авторизация: промежуточный коммит (не разобраться с ошибкой невалидного запроса json при отправке нового коментария после успешной авторизации)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="container">
       <ul class="comments"></ul>
 
+      <p class="reg-text">Для добавления комментария необходимо <button id="reg-button">авторизоваться</button></p>
+
       <div class="add-form">
         <input
           type="text"
