--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <div class="container">
-      <ul class="comments"></ul>
+      <!-- <ul class="comments"></ul>
 
       <p class="reg-text">Для добавления комментария необходимо <button id="reg-button">авторизоваться</button></p>
 
@@ -30,7 +30,7 @@
         </div>
       </div>
 
-      <p class="add-form-loader">Комментарий добавляется...</p>
+      <p class="add-form-loader">Комментарий добавляется...</p> -->
     </div>
 
     <style>
